--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "tmi.js": "^1.8.5"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -38,15 +39,19 @@
     "@tsconfig/svelte": "^2.0.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/tmi.js": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "autoprefixer": "^10.4.2",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "mocha": "^9.1.3",
+    "postcss": "^8.4.5",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -56,6 +61,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^3.0.12",
     "ts-node": "^10.4.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
