--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-
   "include": ["src/**/*"],
+  "compilerOptions": {
+    "strict": true
+  },
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
