--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha 'src/**/*.spec.ts'",
-    "build": "rollup -c",
+    "build:client": "rollup -c",
+    "build:server": "tsc src/webServer/main.ts --esModuleInterop --outDir build",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
+    "start:server": "node build/webServer/main.js",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "repository": {
@@ -29,16 +31,20 @@
   },
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
+    "axios": "^0.25.0",
+    "express": "^4.17.2",
     "sirv-cli": "^2.0.0",
     "tmi.js": "^1.8.5",
     "tone": "^14.7.77"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "@types/chai": "^4.3.0",
+    "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/tmi.js": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
@@ -56,6 +62,7 @@
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-polyfill-node": "^0.8.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "source-map-support": "^0.5.21",
