--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:server": "tsc src/webServer/main.ts --esModuleInterop --outDir build",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "start:server": "node build/webServer/main.js",
+    "start:server": "npm run build:server && node build/webServer/main.js",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "repository": {
@@ -31,47 +31,46 @@
   },
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
+    "@google-cloud/datastore": "^6.6.2",
     "axios": "^0.25.0",
     "express": "^4.17.2",
-    "sirv-cli": "^2.0.0",
+    "sirv-cli": "^2.0.2",
     "tmi.js": "^1.8.5",
     "tone": "^14.7.77"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.0.0",
     "@tsconfig/svelte": "^2.0.0",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^9.1.0",
     "@types/tmi.js": "^1.8.1",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "autoprefixer": "^10.4.2",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "mocha": "^9.1.3",
-    "postcss": "^8.4.5",
-    "rollup": "^2.3.4",
+    "mocha": "^9.2.0",
+    "postcss": "^8.4.6",
+    "rollup": "^2.67.2",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-polyfill-node": "^0.8.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "source-map-support": "^0.5.21",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tailwindcss": "^3.0.12",
-    "ts-node": "^10.4.0",
+    "svelte": "^3.46.4",
+    "svelte-check": "^2.4.3",
+    "svelte-preprocess": "^4.10.3",
+    "tailwindcss": "^3.0.21",
+    "ts-node": "^10.5.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.5.5"
   }
 }
