--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
     "start:server": "npm run build:server && node build/webServer/main.js",
+    "gcpCloudRun": "npm install && npm run start:server",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "repository": {
