gcpCloudRun install production false

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
     "start:server": "node build/webServer/main.js",
-    "gcpCloudRun": "npm run start:server",
+    "gcpCloudRun": "npm install --production=false && npm run build:server && npm run build:client && npm run start:server",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "repository": {
