--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/bbohec/the-cleavage-game#readme",
   "dependencies": {
     "@google-cloud/datastore": "^6.6.2",
+    "@types/youtube": "^0.0.46",
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
