--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on : ubuntu-latest
     env:
       TWITCHUSERNAME: benjaminbohec
+      TWITCHTOKEN: ${{ secrets.TWITCHTOKEN }}
     steps:
       - uses: actions/setup-node@v3
         with:
