--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -6,6 +6,7 @@ jobs:
     env:
       TWITCHUSERNAME: benjaminbohec
       TWITCHTOKEN: ${{ secrets.TWITCHTOKEN }}
+      TWITCHCHANNEL: benjaminbohec
     steps:
       - uses: actions/setup-node@v3
         with:
