--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -62,5 +62,6 @@ jobs:
       - run: npm install
       - run: npm run build:server
       - run: npm run build:client
+      - run : ls
       - uses: ./.github/actions/docker@v1
       - run : ls
