--- a/.github/actions/docker@v1/Dockerfile
+++ b/.github/actions/docker@v1/Dockerfile
@@ -1,13 +1,11 @@
 # Container image that runs your code
 FROM node:16.14.2
 
-WORKDIR /usr/src/app
-
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY ../../../node_modules ./node_modules
-COPY ../../../public ./public
-COPY ../../../build ./build
-COPY ../../../package*.json ./
+COPY ./node_modules ./node_modules
+COPY ./public ./public
+COPY ./build ./build
+COPY ./package*.json ./
 
 # Code file to execute when the docker container starts up
 ENTRYPOINT ["node ./build/webServer/main.js"]
