--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -65,12 +65,13 @@ jobs:
       - run: npm install
       - run: npm run build:server
       - run: npm run build:client
+      - name: 'Authenticate to Google Cloud'
+        id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_JSON }}'
       - name: Setup Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
-        with:
-          project_id: ${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}
-          credentials_json: '${{ secrets.GCP_SA_JSON }}'
-          export_default_credentials: true  # Set to true to authenticate the Cloud Run action
       - name: Authorize Docker push
         run: gcloud auth configure-docker
       - name: Build and Push Container
