--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -58,32 +58,37 @@ jobs:
       GCP_CLOUDRUN_SERVICE: the-cleavage-game-${{ github.ref_name }}
       GCP_REGION: us-central1
     steps:
-      - uses: actions/setup-node@v3
+      - name: Install Nodejs
+        uses: actions/setup-node@v3
         with:
           node-version: 16.14.2
-      - uses: actions/checkout@v3
-      - run: npm install
-      - run: npm run build:server
-      - run: npm run build:client
+      - name: Git checkout on branch ${{ github.ref_name }}
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
+      - name: Build server
+        run: npm run build:server
+      - name: Build client
+        run: npm run build:client
       - name: 'Authenticate to Google Cloud'
         id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GCP_SA_JSON }}'
-      - name: Setup Cloud SDK
+      - name: Setup Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
-      - name: Authorize Docker push
+      - name: Authorize Docker push on Google Cloud container registry
         run: gcloud auth configure-docker
-      - name: Build and Push Container
+      - name: Build and Push Container to Google Cloud
         run: |-
-          docker build -t gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} Dockerfile
+          docker build -t gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} -
           docker push gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
-      - name: Deploy to Cloud Run
+      - name: Deploy to Google Cloud Platform - Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.GCP_CLOUDRUN_SERVICE }}
           image: gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
-      - name: Show Output
+      - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
