--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -79,10 +79,10 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0
       - name: Authorize Docker push on Google Cloud container registry
         run: gcloud auth configure-docker
-      - name: Build and Push Container to Google Cloud
-        run: |-
-          docker build -t gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
-          docker push gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
+      - name: Build docker container from Dockerfile
+        run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
+      - name: Push Container to Google Cloud Storage
+        run: docker push gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
       - name: Deploy to Google Cloud Platform - Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
