--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -52,7 +52,6 @@ jobs:
       BACKEND_FQDN: ${{ github.ref_name }}.lejeuduclivage.com
       PORT: 8080
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      GCP_PROJECT_ID_WITHOUT_OBJECT: ${{ secrets.GCP_PROJECT_ID_WITHOUT_OBJECT }}
       GCP_CLIENT_EMAIL: ${{ secrets.GCP_CLIENT_EMAIL }}
       GCP_PRIVATE_KEY: ${{ secrets.GCP_PRIVATE_KEY }}
       GCP_CLOUDRUN_SERVICE: the-cleavage-game-${{ github.ref_name }}
@@ -80,15 +79,15 @@ jobs:
       - name: Authorize Docker push on Google Cloud container registry
         run: gcloud auth configure-docker
       - name: Build docker container from Dockerfile
-        run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
+        run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
       - name: Push Container to Google Cloud Storage
-        run: docker push gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
+        run: docker push gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
       - name: Deploy to Google Cloud Platform - Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.GCP_CLOUDRUN_SERVICE }}
-          image: gcr.io/${{ env.GCP_PROJECT_ID_WITHOUT_OBJECT }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
+          image: gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
           secrets: |
             GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
