--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -89,6 +89,9 @@ jobs:
           service: ${{ env.GCP_CLOUDRUN_SERVICE }}
           image: gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
-          env_vars: GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ env.GCP_CLIENT_EMAIL }}
+          secrets: |
+            GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}:latest
+            GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }}:latest
+            GCP_PRIVATE_KEY=${{ secrets.GCP_PRIVATE_KEY }}:latest
       - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
