--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -89,10 +89,12 @@ jobs:
           service: ${{ env.GCP_CLOUDRUN_SERVICE }}
           image: gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
-          env_vars: 'BACKEND_SHEME="${{ env.BACKEND_SHEME }}",BACKEND_FQDN="${{ env.BACKEND_FQDN }}",PORT="${{ env.PORT }}"'
           secrets: |
             GCP_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}:latest
             GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }}:latest
             GCP_PRIVATE_KEY=${{ secrets.GCP_PRIVATE_KEY }}:latest
+            BACKEND_SHEME=${{ env.BACKEND_SHEME }}:latest
+            BACKEND_FQDN=${{ env.BACKEND_FQDN }}:latest
+            PORT=${{ env.PORT }}:latest
       - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
