--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -54,7 +54,7 @@ jobs:
       GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
       GCP_CLIENT_EMAIL: ${{ secrets.GCP_CLIENT_EMAIL }}
       GCP_PRIVATE_KEY: ${{ secrets.GCP_PRIVATE_KEY }}
-      GCP_CLOUDRUN_SERVICE: ${{ secrets.GCP_PROJECT_ID }}-${{ github.ref_name }}-pouik
+      GCP_CLOUDRUN_SERVICE: ${{ secrets.GCP_PROJECT_ID }}-${{ github.ref_name }}
       GCP_REGION: us-central1
     steps:
       - name: Install Nodejs
