--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -90,11 +90,11 @@ jobs:
           image: gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
           secrets: |
-            GCP_PROJECT_ID=blah:latest
-            GCP_CLIENT_EMAIL=blah:latest
-            GCP_PRIVATE_KEY=blah:latest
-            BACKEND_SHEME=https:latest
-            BACKEND_FQDN=dev.lejeuduclivage.com:latest
-            PORT=8080:latest
+            GCP_PROJECT_ID="blah":latest
+            GCP_CLIENT_EMAIL="blah":latest
+            GCP_PRIVATE_KEY="blah":latest
+            BACKEND_SHEME="https":latest
+            BACKEND_FQDN="dev.lejeuduclivage.com":latest
+            PORT="8080":latest
       - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
