--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -90,11 +90,7 @@ jobs:
           image: gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           region: ${{ env.GCP_REGION }}
           secrets: |
-            GCP_PROJECT_ID="blah":latest
-            GCP_CLIENT_EMAIL="blah":latest
-            GCP_PRIVATE_KEY="blah":latest
-            BACKEND_SHEME="https":latest
-            BACKEND_FQDN="dev.lejeuduclivage.com":latest
-            PORT="8080":latest
+            GCP_PRIVATE_KEY=GCP_PRIVATE_KEY:latest
+          env_vars: GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }},BACKEND_SHEME=${{ env.BACKEND_SHEME }},BACKEND_FQDN=${{ env.BACKEND_FQDN }},PORT=${{ env.PORT }}
       - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
