--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -69,6 +69,10 @@ jobs:
         run: npm run build:server
       - name: Build client
         run: npm run build:client
+      - name: Build docker container from Dockerfile
+        run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
+      - name: Push Container to Google Cloud Storage
+        run: docker push gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
       - name: 'Authenticate to Google Cloud'
         id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -78,10 +82,6 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0
       - name: Authorize Docker push on Google Cloud container registry
         run: gcloud auth configure-docker
-      - name: Build docker container from Dockerfile
-        run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
-      - name: Push Container to Google Cloud Storage
-        run: docker push gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
       - name: Deploy to Google Cloud Platform - Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
@@ -91,6 +91,6 @@ jobs:
           region: ${{ env.GCP_REGION }}
           secrets: |
             GCP_PRIVATE_KEY=GCP_PRIVATE_KEY:latest
-          env_vars: GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }},BACKEND_SHEME=${{ env.BACKEND_SHEME }},BACKEND_FQDN=${{ env.BACKEND_FQDN }},PORT=${{ env.PORT }}
+          env_vars: GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }},BACKEND_SHEME=${{ env.BACKEND_SHEME }},BACKEND_FQDN=${{ env.BACKEND_FQDN }}
       - name: Show deployment URL
         run: echo ${{ steps.deploy.outputs.url }}
