--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,6 +100,6 @@ jobs:
         uses: chrnorm/deployment-action@v2
         id: deployment
         with:
-          # token: '${{ github.token }}'
+          token: '${{ github.token }}'
           environment-url: ${{ steps.deploy.outputs.url }}
           environment: ${{ github.ref_name }}
