change action for deployment status update

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,7 +61,7 @@ jobs:
     steps:
       - name: GitHub deployment - Pending
         uses: chrnorm/deployment-action@v2
-        id: deployment_pending
+        id: deployment
         with:
           token: '${{ github.token }}'
           environment-url: ${{ steps.deploy.outputs.url }}
@@ -81,12 +81,11 @@ jobs:
       - name: Build docker container from Dockerfile
         run: docker build -t gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }} .
       - name: GitHub deployment - In Progress
-        uses: chrnorm/deployment-action@v2
+        uses: chrnorm/deployment-status@v2
         id: deployment_in_progress
         with:
           token: '${{ github.token }}'
-          environment-url: ${{ steps.deploy.outputs.url }}
-          environment: ${{ github.ref_name }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'in_progress'
       - name: 'Authenticate to Google Cloud'
         id: 'auth'
@@ -113,19 +112,17 @@ jobs:
         run: gcloud beta run domain-mappings list --region ${{ env.GCP_REGION }}
       - name: GitHub deployment - Success
         if: success()
-        uses: chrnorm/deployment-action@v2
+        uses: chrnorm/deployment-status@v2
         id: deployment_success
         with:
           token: '${{ github.token }}'
-          environment-url: ${{ steps.deploy.outputs.url }}
-          environment: ${{ github.ref_name }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'success'
       - name: GitHub deployment - Failed
         if: failure()
-        uses: chrnorm/deployment-action@v2
+        uses: chrnorm/deployment-status@v2
         id: deployment_failed
         with:
           token: '${{ github.token }}'
-          environment-url: ${{ steps.deploy.outputs.url }}
-          environment: ${{ github.ref_name }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
           state: 'failure'
