--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -112,6 +112,7 @@ jobs:
       - name: Deploy to Google Cloud Platform - Cloud Run
         id: gcpCloudRunDeploy
         run: >
+          echo "::set-output name=deploy::$(
           gcloud beta run deploy ${{ env.GCP_CLOUDRUN_SERVICE }}
           --image gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           --quiet
@@ -126,19 +127,20 @@ jobs:
           --concurrency 1000
           --allow-unauthenticated
           --format json
+          )"
       - name: List GCP Cloud Run domain mappings
         run: gcloud beta run domain-mappings list --region ${{ env.GCP_REGION }}
       - name: Cloud Run Deploy - Outputs
         run: |
           echo OUTPUTS: ${{join(steps.gcpCloudRunDeploy.outputs.*, '\n')}}
-          echo URL: ${{ steps.gcpCloudRunDeploy.outputs.url }}
+          echo URL: ${{ steps.gcpCloudRunDeploy.outputs.deploy.url }}
       - name: GitHub deployment - Success
         if: success()
         uses: chrnorm/deployment-status@v2
         id: deployment_success
         with:
           token: '${{ github.token }}'
-          environment-url: ${{ steps.gcpCloudRunDeploy.outputs.url }}
+          environment-url: ${{ steps.gcpCloudRunDeploy.outputs.deploy.url }}
           deployment-id: ${{ steps.gitHubDeployment.outputs.deployment_id }}
           state: 'success'
       - name: GitHub deployment - Failed
