--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -114,20 +114,19 @@ jobs:
         run: >
           echo "::set-output name=url::$(
           gcloud beta run deploy ${{ env.GCP_CLOUDRUN_SERVICE }}
-          --image gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
+          --image=gcr.io/${{ env.GCP_PROJECT_ID }}/${{ env.GCP_CLOUDRUN_SERVICE }}:${{  github.sha }}
           --quiet
-          --platform managed
-          --region ${{ env.GCP_REGION }}
-          --update-env-vars GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }},BACKEND_SHEME=${{ env.BACKEND_SHEME }},BACKEND_FQDN=${{ env.BACKEND_FQDN }}
-          --update-secrets GCP_PRIVATE_KEY=GCP_PRIVATE_KEY:latest
-          --project ${{ env.GCP_PROJECT_ID }}
-          --memory 256Mi
-          --min-instances 0
-          --max-instances 1
-          --concurrency 1000
+          --platform=managed
+          --region=${{ env.GCP_REGION }}
+          --update-env-vars=GCP_PROJECT_ID=${{ env.GCP_PROJECT_ID }},GCP_CLIENT_EMAIL=${{ secrets.GCP_CLIENT_EMAIL }},BACKEND_SHEME=${{ env.BACKEND_SHEME }},BACKEND_FQDN=${{ env.BACKEND_FQDN }}
+          --update-secrets=GCP_PRIVATE_KEY=GCP_PRIVATE_KEY:latest
+          --project=${{ env.GCP_PROJECT_ID }}
+          --memory=256Mi
+          --min-instances=0
+          --max-instances=1
+          --concurrency=1000
           --allow-unauthenticated
-          --format json
-          | jq -r '.url'
+          --format=value[](url)
           )"
       - name: List GCP Cloud Run domain mappings
         run: gcloud beta run domain-mappings list --region ${{ env.GCP_REGION }}
